deployment1.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: getstartedjava-jaylee
  labels:
    app: getstartedjava-jaylee
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: getstartedjava-jaylee
  template:
    metadata:
      labels:
        app: getstartedjava-jaylee
        version: v1
    spec:
      containers:
      - name: getstartedjava-jaylee
        image: de.icr.io/cr-namespace-jaylee/getstartedjava:latest
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
#  annotations:
#    webapi: "true"
  name: getstartedjava-jaylee
#  labels:
#    app: getstartedjava-jaylee
spec:
  selector:
    app: getstartedjava-jaylee
  type: NodePort
  ports:
  - port: 80
    targetPort: 9080
    protocol: TCP
    name: http
