kube-inject.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: getstartedjava-jaylee
    version: v1
  name: getstartedjava-jaylee
spec:
  replicas: 1
  selector: null
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.istio.io/status: '{"version":"761ebc5a63976754715f22fcf548f05270fb4b8db07324894aebdb31fa81d960","initContainers":["istio-init"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-certs"],"imagePullSecrets":null}'
      creationTimestamp: null
      labels:
        app: getstartedjava-jaylee
        security.istio.io/tlsMode: istio
        version: v1
    spec:
      containers:
      - env:
        - name: VERSION
          value: "1"
        - name: CLOUDANT_URL
          value: http://cloudant-service-jaylee:80
        - name: dbUsername
          valueFrom:
            secretKeyRef:
              key: dbUsername
              name: cloudant-secret
        - name: dbPassword
          valueFrom:
            secretKeyRef:
              key: dbPassword
              name: cloudant-secret
        image: de.icr.io/cr-namespace-jaylee/getstartedjava:latest
        name: getstartedjava-jaylee
        ports:
        - containerPort: 9080
        readinessProbe:
          httpGet:
            path: /
            port: 9080
          initialDelaySeconds: 10
          periodSeconds: 5
        resources: {}
      - args:
        - proxy
        - sidecar
        - --domain
        - $(POD_NAMESPACE).svc.cluster.local
        - --configPath
        - /etc/istio/proxy
        - --binaryPath
        - /usr/local/bin/envoy
        - --serviceCluster
        - getstartedjava-jaylee.$(POD_NAMESPACE)
        - --drainDuration
        - 45s
        - --parentShutdownDuration
        - 1m0s
        - --discoveryAddress
        - istio-pilot.istio-system:15010
        - --zipkinAddress
        - zipkin.istio-system:9411
        - --dnsRefreshRate
        - 300s
        - --connectTimeout
        - 10s
        - --proxyAdminPort
        - "15000"
        - --concurrency
        - "2"
        - --controlPlaneAuthPolicy
        - NONE
        - --statusPort
        - "15020"
        - --applicationPorts
        - "9080"
        image: icr.io/ext/istio/proxyv2:1.2.5
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        ports:
        - containerPort: 15090
          name: http-envoy-prom
          protocol: TCP
        readinessProbe:
          failureThreshold: 30
          httpGet:
            path: /healthz/ready
            port: 15020
          initialDelaySeconds: 1
          periodSeconds: 2
        resources:
          limits:
            cpu: "2"
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 1337
        volumeMounts:
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /etc/certs/
          name: istio-certs
          readOnly: true
      volumes:
      - emptyDir:
          medium: Memory
        name: istio-envoy
      - name: istio-certs
        secret:
          optional: true
          secretName: istio.default
status: {}
---
kind: Service
apiVersion: v1
metadata:
  annotations:
    webapi: "true"
  name: getstartedjava-jaylee
  labels:
    app: getstartedjava-jaylee
spec:
  selector:
    app: getstartedjava-jaylee
  type: NodePort
  ports:
  - port: 80
    targetPort: 9080
    protocol: TCP
    name: http
---
