eventgateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
 name: eventgateway
spec:
 selector:
   istio: ingressgateway
 servers:
 - port:
     name: http
     number: 80
     protocol: HTTP
   hosts:
   - '*'
